--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta charset="utf-8">
     </head>
     <body>
+        Hi, my name is Tien
     I'm learning how to deploy a website hosted on github using my custom domain i just bought.
-    I'm not learning html/css (how to write a website right now)
+    I'm not learning html/css (how to write a website) right now.
     testing, that's it.
     </body>
 </html>
