--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>Thảo ăn cứt</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        Thảo ăn cứt!
-        -abc-
-    </body>
-</html>
+<!DOCTYPE html>
+<h1>My website!</h1>
+<p>This is my website. Thanks for stopping by!</p>
+<p>Now my website is live!</p>
