add head and title tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<h1>My website!</h1>
-<p>This is my website. Thanks for stopping by!</p>
-<p>Now my website is live!</p>
 
-<h1>ANH YEU NHUNG <3</h1>
+<head>
+    <title>Running Turtle</title>
+
+</head>
+
+<body>
+    <p>My name is Tien, thank you for stopping by!</p>
+    <hr>
+
+    <h1>anh yeu Nhung nhieu nhieu</h1>
+</body>
