--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
-    <p>My name is Tien, thank you for stopping by!</p>
-    <hr>
+    <div>
+        <p>My name is Tien, thank you for stopping by!</p>
+    </div>
 
-    <h1>anh yeu Nhung nhieu nhieu</h1>
+    <div>
+        <hr>
+        <h1>anh yeu Nhung nhieu nhieu</h1>
+    </div>
 </body>
