--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+<html lang="vi">
+    <head>
+        <title>Running Turtle</title>
 
-<head>
-    <title>Running Turtle</title>
+    </head>
 
-</head>
+    <body>
+        <div>
+            <p>My name is Tien, thank you for stopping by!</p>
+        </div>
 
-<body>
-    <div>
-        <p>My name is Tien, thank you for stopping by!</p>
-    </div>
-
-    <div>
-        <hr>
-        <h1>ANH YÊU NHUNG NHIỀU NHIỀU!</h1>
-    </div>
-</body>
+        <div>
+            <hr>
+            <h1>ANH YÊU NHUNG NHIỀU NHIỀU!</h1>
+        </div>
+    </body>
+</html>
