add charset utf-8

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi">
     <head>
+        <meta charset="utf-8">
         <title>Running Turtle</title>
-
     </head>
 
     <body>
