--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Running Turtle</title>
     </head>
 
@@ -13,6 +14,7 @@
         <div>
             <hr>
             <h1>ANH YÊU NHUNG NHIỀU NHIỀU!</h1>
+            <img src="/images/nhung.jpg" alt="a beautiful girl named Nhung">
         </div>
     </body>
 </html>
