centered webpage, fixed-size width nhung.jpg

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Running Turtle</title>
+        <style type="text/css" media="all">
+body {
+    text-align: center;
+}
+img.nhung {
+    width: 500px;
+} 
+        </style>
     </head>
 
     <body>
@@ -14,7 +22,7 @@
         <div>
             <hr>
             <h1>ANH YÊU NHUNG NHIỀU NHIỀU!</h1>
-            <img src="/images/nhung.jpg" alt="a beautiful girl named Nhung">
+            <img class="nhung" src="/images/nhung.jpg" alt="a beautiful girl named Nhung">
         </div>
     </body>
 </html>
