added author and description and remove <style>

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="author" content="Tien Bui Gia">
+	<meta name="description" content="Tien Bui Gia's website is a place for me (Tien) to practice developing web sites and applications. It also provide information about me.">
+	<link rel="icon" href="images/aboxturtle.ico">
+
         <title>Running Turtle</title>
-        <style type="text/css" media="all">
-body {
-    text-align: center;
-}
-img {
-    max-width: 100%;
-} 
-        </style>
     </head>
 
     <body>
