separated css and html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="author" content="Tien Bui Gia">
 	<meta name="description" content="Tien Bui Gia's website is a place for me (Tien) to practice developing web sites and applications. It also provide information about me.">
+
 	<link rel="icon" href="images/aboxturtle.ico">
+	<link rel="stylesheet" href="styles.css">
+	<!-- <script src="js.js" defer></script> -->
 
         <title>Running Turtle</title>
     </head>
