change text back

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="vi">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="author" content="Tien Bui Gia">
-	<meta name="description" content="Tien Bui Gia's website is a place for me (Tien) to practice developing web sites and applications. It also provide information about me.">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="author" content="Tien Bui Gia">
+		<meta name="description" content="Tien Bui Gia's website is a place for me (Tien) to practice developing web sites and applications. It also provide information about me.">
 
-	<link rel="icon" href="images/aboxturtle.ico">
-	<link rel="stylesheet" href="styles.css">
-	<!-- <script src="js.js" defer></script> -->
+		<link rel="icon" href="images/aboxturtle.ico">
+		<link rel="stylesheet" href="styles.css">
+		<!-- <script src="js.js" defer></script> -->
 
-        <title>Running Turtle</title>
-    </head>
+		<title>Running Turtle</title>
+	</head>
 
-    <body>
-        <div>
-            <p>My name is Tien, thank you for stopping by!</p>
-        </div>
+	<body>
+		<div>
+			<p>My name is Tien, thank you for stopping by!</p>
+		</div>
 
-        <div>
-            <hr>
-            <h1>ANH YÊU NHUNG RẤT NHIỀU!</h1>
-            <img class="nhung" src="/images/nhung.jpg" alt="a beautiful girl named Nhung">
-        </div>
-    </body>
+		<div>
+			<hr>
+			<h1>ANH YÊU NHUNG NHIỀU NHIỀU!</h1>
+			<img class="nhung" src="/images/nhung.jpg" alt="a beautiful girl named Nhung">
+		</div>
+	</body>
 </html>
