--- a/index.html
+++ b/index.html
@@ -16,18 +16,13 @@
 	<body>
 		<div>
 			<p>My name is Tien, thank you for stopping by!</p>
-		</div>
-
-		<div>
 			<hr>
-			<h2>Bạn đi lấy bằng 1 mình đi!</h2>
-			<img src="https://scontent.fhan2-1.fna.fbcdn.net/v/t39.30808-1/276316152_3234218273566265_5604260782688382888_n.jpg?stp=c0.75.200.200a_dst-jpg_p200x200&ccb=1-6&_nc_ohc=B8_euEFtKGIAX89ztbs&tn=kGEmBK4MBcDynzJN&_nc_ht=scontent.fhan2-1.fna&oh=00_AT-PXgZu6ToCqA6Cu4xY4e2nQ8UEGVrzUFZHVhu3ZLUzYw&oe=627B1900" alt="a random, ugly guy">
 		</div>
-
 		<div>
-			<hr>
-			<h2>Hải Phòng cũng đẹp đấy, còn bạn thì xấu!</h2>
-			<img src="https://scontent.fhan2-2.fna.fbcdn.net/v/t39.30808-6/248803101_2952945208354238_1068220625403693145_n.jpg?ccb=1-6&_nc_ohc=T13L_ZJ9FigAX-_5OdN&_nc_ht=scontent.fhan2-2.fna&oh=00_AT8hxgTDvVJHuAarO7wmnEWOl4fscssRSNFHDA712P933w&oe=627C4DA9" alt="another random, ugly guy">
+			<h2>xin lỗi ạ!</h2>
+			<p>Sit eligendi consequatur necessitatibus ut sit ipsum non! Modi perferendis fuga consequatur eaque id qui Itaque doloribus quam fugit atque repellat, enim Molestiae consectetur officiis ad eaque corrupti Unde sint ducimus qui commodi maxime ipsum. Pariatur nostrum dignissimos illum cum omnis Molestias omnis error quidem modi eum! Debitis officia provident.</p>
+			<img src="images/nhung2.jpg" alt="a beautiful girl">
+
 		</div>
 	</body>
 </html>
