expressed my sadness

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 			<hr>
 		</div>
 		<div>
-			<h2>xin lỗi ạ!</h2>
-			<p>Sit eligendi consequatur necessitatibus ut sit ipsum non! Modi perferendis fuga consequatur eaque id qui Itaque doloribus quam fugit atque repellat, enim Molestiae consectetur officiis ad eaque corrupti Unde sint ducimus qui commodi maxime ipsum. Pariatur nostrum dignissimos illum cum omnis Molestias omnis error quidem modi eum! Debitis officia provident.</p>
-			<img src="images/nhung2.jpg" alt="a beautiful girl">
-
+			<h2>HI!</h2>
+			<p>I'm Tien</p>
+			<p>and I am really sad, but who care?</p>
+		</div>
+		<div>
+			<h2>sad image</h2>
+			<img src="images/sad.jpg" alt="a sad image">
 		</div>
 	</body>
 </html>
