--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
 			<p>My name is Tien, thank you for stopping by!</p>
 			<hr>
 		</div>
-		<div>
-			<h2>HI!</h2>
-			<p>I'm Tien</p>
-			<p>and I am really sad, but who care?</p>
-		</div>
-		<div>
-			<h2>sad image</h2>
-			<img src="images/sad.jpg" alt="a sad image">
-		</div>
+		<h1>TienBuiGia's Awesome Website</h1>
 	</body>
 </html>
