add github links

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
 			<hr>
 		</div>
 		<h1>TienBuiGia's Awesome Website</h1>
+		<section>
+			<div>
+				<h2>Github</h2>
+				<a href="https://github.com/tienbuigia">link</a>
+			</div>
+		</section>
 	</body>
 </html>
