--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<h1>TienBuiGia's Awesome Website</h1>
 		<section>
 			<div>
-				<h2>Github</h2>
-				<a href="https://github.com/tienbuigia">link</a>
+				<h2>Links</h2>
+				<a href="https://github.com/tienbuigia">Github</a>
 			</div>
 		</section>
 	</body>
