copy bestmotherfuckingwebsite style

--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html lang="vi">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<meta name="author" content="Tien Bui Gia">
-		<meta name="description" content="Tien Bui Gia's website is a place for me (Tien) to practice developing web sites and applications. It also provide information about me.">
-
-		<link rel="icon" href="images/aboxturtle.ico">
-		<link rel="stylesheet" href="styles.css">
-		<!-- <script src="js.js" defer></script> -->
-
-		<title>Running Turtle</title>
-	</head>
-
-	<body>
-		<div>
-			<p>My name is Tien, thank you for stopping by!</p>
-			<hr>
-		</div>
-		<h1>TienBuiGia's Awesome Website</h1>
-		<section>
-			<div>
-				<h2>Links</h2>
-				<a href="https://github.com/tienbuigia">Github</a>
-			</div>
-		</section>
-	</body>
+<html lang="en">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="author" content="Tien Bui Gia">
+	<meta name="description" content="Tien Bui Gia's website is a place for me to practice developing web sites and applications. It also provide information about me.">
+	<link rel="icon" href="date:image/png;base64,">
+	<title>Running Turtle</title>
+	<style>
+@media (prefers-color-scheme: dark){
+	body {color:#fff;background:#000}
+	a:link {color:#cdf}
+	a:hover, a:visited:hover {color:#def}
+	a:visited {color:#dcf}
+}
+	body{
+		margin:1em auto;
+		max-width:40em;
+		padding:0 .62em;
+		font:1.2em/1.62 sans-serif
+	}
+	h1, h2, h3 {
+		line-height:1.2
+	}
+	@media print{
+		body{
+			max-width:none
+		}
+	}
+	</style>
+	<article>
+		<header>
+			<h1>This is Tien Bui Gia website.</h1>
+			<aside>thanks for stopping by and this website is perfect.</aside>
+			<h2>Links to my stuff</h2>
+			<ul>
+				<li>Github</li>
+			</ul>
+			<h2>Anh Yeu Nhung</h2>
+			<p>Nhung is my girlfriend.</p>
+		</header>
+	</article>
 </html>
