update github link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<aside>thanks for stopping by and this website is perfect.</aside>
 			<h2>Links to my stuff</h2>
 			<ul>
-				<li>Github</li>
+				<li><a title="Github.com" href="https://github.com/tienbuigia/">github</a></li>
 			</ul>
 			<h2>Anh Yeu Nhung</h2>
 			<p>Nhung is my girlfriend.</p>
