show nhung image

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			</ul>
 			<h2>Anh Yeu Nhung</h2>
 			<p>Nhung is my girlfriend.</p>
+			<img src="images/nhung2.jpg" alt="Nhung taking selfie in front of a mirror">
 		</header>
 	</article>
 </html>
