fix image width

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		padding:0 .62em;
 		font:1.2em/1.62 sans-serif
 	}
+	img{max-width:100%;}
 	h1, h2, h3 {
 		line-height:1.2
 	}
@@ -38,6 +39,7 @@
 			</ul>
 			<h2>Anh Yeu Nhung</h2>
 			<p>Nhung is my girlfriend.</p>
+			<img src="images/nhungjapan.jpg" alt="Nhung wearing kimono, and many trees">
 			<img src="images/nhung2.jpg" alt="Nhung taking selfie in front of a mirror">
 		</header>
 	</article>
